k8s/dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: diabetes-dashboard-stage
  name: diabetes-dashboard-stage
  namespace: diabetes-dashboard-stage
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: diabetes-dashboard-stage
  type: ClusterIP
