k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: diabetes-dashboard
  name: diabetes-dashboard
  namespace: diabetes-dashboard
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: diabetes-dashboard
  type: ClusterIP
